test/extern/ferguson/invalid-num-args.good
invalid-num-args.chpl:4: error: mismatched number of arguments in call to 'myFunc'
invalid-num-args.chpl:7: note: function called here
note: check that the number of arguments match the C function signature
