test/extern/ferguson/invalid-num-args.chpl
use CTypes;
require "invalid-num-args.h";
require "invalid-num-args.c";
extern proc myFunc();

proc main() {
  myFunc();
}
